# learn

SoftRasterRender/: stdafx.h
SoftRasterRender/reader/: objfilemodel.cpp  objfilemodel.h
SoftRasterRender/renderengine/: CMakeLists.txt
SoftRasterRender/renderengine/common/: common.h
SoftRasterRender/renderengine/include/: ishader.h
SoftRasterRender/tgaimage/: CMakeLists.txt
SoftRasterRender/utility/: geometry.h
SoftRasterRenderer/: CMakeLists.txt  main.cpp  stdafx.h
SoftRasterRenderer/reader/: CMakeLists.txt  imodel.cpp  objfilemodel.cpp  objfilemodel.h
SoftRasterRenderer/reader/include/: imodel.h
SoftRasterRenderer/renderengine/: CMakeLists.txt  irenderengine.cpp
SoftRasterRenderer/renderengine/common/: common.cpp  common.h
SoftRasterRenderer/renderengine/include/: iobject.h  irenderengine.h  ishader.h  triangleobj.h
SoftRasterRenderer/renderengine/rasterengine/: rasterengine.cpp  rasterengine.h
SoftRasterRenderer/renderengine/raytraceengine/: objadapt.cpp  objadapt.h  raytraceengine.cpp  raytraceengine.h  scenemanager.cpp  scenemanager.h  triangleobj.cpp  triangleobj.h
SoftRasterRenderer/tgaimage/: tgaimage.cpp
SoftRasterRenderer/tgaimage/include/: tgaimage.h
SoftRasterRenderer/utility/: geometry.h  threadpool.h
cuda/matrixdot/: matrixdot.cu  matrixdot_op.cu
cuda/vectordot/: kernel.cu
datas/: 源代码.txt
glqt/learngl/: openglwidget.cpp  openglwidget.h  shader.frag
glqt/learngl_deferred_shading/: framebufshader.frag  openglwidget.cpp  openglwidget.h  resource.qrc
glqt/learngl_deferred_shading_ssao/: framebufshader.frag  framebufshader.vert  lightshader.vert  openglwidget.cpp  openglwidget.h  resource.qrc  shader.frag  ssaoblurshader.frag  ssaoshader.frag
glqt/learngl_depth/: framebuf_shader.frag  framebuf_shader.vert  geomshader.geom  geomshader.vert  instanceshader.vert  openglwidget.cpp  openglwidget.h  resource.qrc  shader.frag  shader.vert  shaderstencil.frag  sky_shader.frag  sky_shader.vert  widget.cpp  widget.h
glqt/learngl_ffmpeg/: Makefile  Makefile.Debug  ffmpegparse.cpp  ffmpegparse.h  imagescache.cpp  imagescache.h  learngl_ffmpeg.pro  openglwidget.cpp  openglwidget.h  resource.qrc  widget.cpp
glqt/learngl_ffmpeg_player/: Makefile.Release  audioplayer.cpp  audioplayer.h  avframequeue.cpp  avframequeue.h  avpacketqueue.cpp  decodethread.cpp  decodethread.h  demuxthread.cpp  multimediaqueue.h  videoplayer.cpp  widget.cpp  widget.h
glqt/learngl_freetype/: Makefile  freetypemanager.cpp  freetypemanager.h  learngl_freetype.pro  openglwidget.cpp  openglwidget.h  shader.frag  widget.cpp  widget.h
glqt/learngl_hdr_bloom/: framebufshader.frag  learngl_hdr_bloom.pro  openglwidget.cpp  openglwidget.h
glqt/learngl_hdr_bloom_02/: bloomshader.frag  framebufshader.frag  framebufshader.vert  openglwidget.cpp  openglwidget.h  resource.qrc
glqt/learngl_light/: openglwidget.cpp  openglwidget.h  resource.qrc  shader.frag  shader.vert
glqt/learngl_omnidirectional_shadow/: framebufshader.frag  openglwidget.cpp  openglwidget.h  resource.qrc  shader.frag  shader.vert
glqt/learngl_pbr/: framebufshader.vert  openglwidget.cpp  openglwidget.h  pbrshader.frag  resource.qrc  shader.frag
glqt/learngl_pbr _diffuse_ibl/: openglwidget.cpp  pbrshader.frag  pbrshader.vert  resource.qrc
glqt/learngl_pbr _specular_ibl/: backgroundshader.frag  cubemapshader.frag  cubemapshader.vert  irradianceshader.frag  learngl_pbr _specular_ibl.pro  openglwidget.h
glqt/learngl_shadow/: openglwidget.cpp  openglwidget.h  resource.qrc  shader.frag  shader.vert
graphic/SoftRasterRenderer/: ourgl.cpp  ourgl.h  output.tga
kvulkanengin/: CMakeLists.txt  main.cpp
kvulkanengin/assets/shaders/: forward.frag  forward.vert
kvulkanengin/core/: CMakeLists.txt
kvulkanengin/core/commands/: kcommandbuffer.cpp  kcommandbuffer.h  kcommandpool.cpp  kcommandpool.h
kvulkanengin/core/configs/: commondesc.h  devicedesc.h  instancedesc.h  pipelinecreatedesc.h  renderpassdesc.h  swapchaindesc.h
kvulkanengin/core/context/: kcorecontext.cpp  kcorecontext.h  kdevice.cpp  kdevice.h  kinstance.cpp  kinstance.h  kphysicaldevice.cpp  kphysicaldevice.h  ksurface.cpp  ksurface.h  kswapchain.cpp  kswapchain.h
kvulkanengin/core/descriptor/: kdescriptorpool.cpp  kdescriptorpool.h  kdescriptorset.cpp  kdescriptorset.h  kdescriptorsetlayout.cpp  kdescriptorsetlayout.h
kvulkanengin/core/objects/: kbuffer.cpp  kbuffer.h  kframebuffer.cpp  kframebuffer.h  kimage.cpp  kimage.h  kimageview.cpp  kimageview.h  ksampler.cpp  ksampler.h
kvulkanengin/core/pipeline/: kpipeline.cpp  kpipeline.h  kpipelinelayout.cpp  kpipelinelayout.h  kshadermodule.cpp  kshadermodule.h
kvulkanengin/core/renderPass/: krenderpass.cpp  krenderpass.h
kvulkanengin/core/sync/: kfence.cpp  kfence.h  ksemaphore.cpp  ksemaphore.h
kvulkanengin/engine/: CMakeLists.txt  common.h  engine.cpp  engine.h
kvulkanengin/engine/graph/: kforwardpass.cpp  kforwardpass.h  kgraphpass.cpp  kgraphpass.h  krendergraph.cpp  krendergraph.h  krenderresource.h  kresourcepool.cpp  kresourcepool.h
kvulkanengin/engine/job/: kjobsystem.cpp  kjobsystem.h  kthreadpool.h
kvulkanengin/engine/render/: forwardpass.cpp  forwardpass.h  renderdata.h  scenerenderer.h
kvulkanengin/engine/resource/: material.h  mesh.h  resourcemanager.cpp  resourcemanager.h  texture.h
kvulkanengin/engine/scene/: components.h  entity.h  scene.cpp  scene.h
kvulkanengin/logic/: CMakeLists.txt
kvulkanengin/logic/context/: klogiccontext.cpp  klogiccontext.h
kvulkanengin/logic/frame/: kframeresources.cpp  kframeresources.h
kvulkanengin/logic/platform/glfw/: glfwwindow.cpp  glfwwindow.h
kvulkanengin/logic/platform/include/: ikwindow.h
kvulkanengin/logic/renderer/forwardrenderer/: kforwardrenderer.cpp  kforwardrenderer.h
kvulkanengin/logic/renderer/include/: irenderer.h
player/: audioplayer.cpp  audioplayer.h  avframequeue.h  avpacketqueue.h  avsync.h  decodethread.cpp  demuxthread.cpp  demuxthread.h  main.cpp  multimediathread.h  player.pro  shader.frag  videoplayer.cpp  videoplayer.h  widget.cpp  widget.h
(+12 files in other folders)
